[gd_scene load_steps=4 format=3 uid="uid://b8ecti2dhsooi"]

[ext_resource type="Texture2D" uid="uid://ccur7xyjvm5n2" path="res://GUI/radial_menu_image.png" id="1_a7qbs"]
[ext_resource type="Script" path="res://GUI/radial_menu.gd" id="1_ttqma"]
[ext_resource type="Texture2D" uid="uid://c7pw5e2jpklb5" path="res://GUI/radial_menu_position_marker..png" id="3_7bes8"]

[node name="RadialMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ttqma")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 357.0
offset_top = 105.0
offset_right = 795.0
offset_bottom = 543.0
texture = ExtResource("1_a7qbs")

[node name="separators_bars" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="position_marker" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 538.0
offset_top = 164.0
offset_right = 614.0
offset_bottom = 320.0
pivot_offset = Vector2(38, 156)
texture = ExtResource("3_7bes8")

[node name="item_images" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
